Listar luchadores en pagina principal

--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
                 <div class="col-md-6 portfolio-nav mt-40 wow animated slideInRight" data-wow-delay=".2s">
                     <ul class="nav navbar-nav">
                         <li><a class="filter active" data-filter="all">Todos</a></li>
-                        <li><a class="filter" data-filter=".business">Arte para el pueblo</a></li>
-                        <li><a class="filter" data-filter=".creative">Asambleas populares</a></li>
-                        <li><a class="filter" data-filter=".education">Coordinación de regiones</a></li>
-                        <li><a class="filter" data-filter=".blog">Primera Linea</a></li>
+                        <li><a class="filter" data-filter=".arte">Arte para el pueblo</a></li>
+                        <li><a class="filter" data-filter=".asambleas">Asambleas populares</a></li>
+                        <li><a class="filter" data-filter=".regiones">Coordinación de regiones</a></li>
+                        <li><a class="filter" data-filter=".primera_linea">Primera Linea</a></li>
                         <li><a class="filter" data-filter=".mujeres">Mujeres</a></li>
                         <li><a class="filter" data-filter=".etnias">Campesinos, indígenas y etnias</a></li>
                     </ul>
@@ -304,133 +304,6 @@
                 <div class="portfolio-item-wrapper col-md-12 clearfix wow animated fadeInUp mt-100" data-wow-delay=".5s"
                     id="mea-portfolio">
 
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work1.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">A boat of hope</h2>
-                                </a>
-                                <p>Istambul, Turkey</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix education more">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work2.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Visit to moon</h2>
-                                </a>
-                                <p>Nasa, USA</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix free education">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work3.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Lighthouse of Cox</h2>
-                                </a>
-                                <p>Chittagong, Bangladesh</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix creative more business">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work4.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Bug of the day</h2>
-                                </a>
-                                <p>Delhi, India</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix more free creative">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work5.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Loard of the ring</h2>
-                                </a>
-                                <p>Novel, USA</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix mujeres">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work6.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Wings of paper</h2>
-                                </a>
-                                <p>Venis, Italy</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog etnias more">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work7.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Snail Of Sea</h2>
-                                </a>
-                                <p>Chittagong, Bangladesh</p>
-                            </figcaption>
-                        </figure>
-                    </div>
-
-                    <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix more">
-                        <figure class="single-portfolio">
-                            <img class="img-responsive" src="/assets/images/portfolio/work8.jpg" alt="">
-                            <figcaption class="hover-content">
-                                <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i
-                                        class="material-icons">&#xE5C8;</i>
-                                    <div class="ripple-container"></div>
-                                </a>
-                                <a href="portfolio-single.html">
-                                    <h2 class="subtitle">Cup Of Tea</h2>
-                                </a>
-                                <p>Sylhet, Bangladesh</p>
-                            </figcaption>
-                        </figure>
-                    </div>
                 </div>
             </div>
             <div class="row mt-30 wow animated fadeInUp" data-wow-delay=".3s">
@@ -792,7 +665,25 @@
                     completarNoticia(noticia2, 2);
                 },
                 error: function () {
-                    console.log('There was some error performing the AJAX call!');
+                    console.log('There was some error performing the news AJAX call!');
+                }
+            });
+        });
+
+        $(document).ready(function () {
+            $.ajax({
+                url: '/php/luchadores/list.php',
+                data: { limit: 8 },
+                success: function (data) {
+                    var json = $.parseJSON(data);
+                    $.each( json.resultados, function( key, value ) {
+                        $("#mea-portfolio").append(cargarInformacionLuchadores(value));
+                     });
+                    // MixitUp Init
+	                $('#mea-portfolio').mixItUp(); 
+                },
+                error: function () {
+                    console.log('There was some error performing the fighters AJAX call!');
                 }
             });
         });
