Obtener y actualizar situación actual

--- a/admon/actualidad.html
+++ b/admon/actualidad.html
@@ -158,7 +158,7 @@
 
                         <div class="featured-image">
                             <a href="#">
-                                <img id="noticia-imagen-0" src="/assets/images/blog/featured1.png" alt="">
+                                <img id="noticia-imagen-0" onerror="this.src='/assets/images/default/noticias.jpeg'" src="...">
                             </a>
                         </div>
 
