--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -254,8 +254,8 @@
                                     </div>
                                     <h2 class="subtitle">Bogotá</h2>
                                     <div class="social-profiles">
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a target="_blank" href="https://twitter.com/comitesdelucha?t=HtzgtD1b5jCrp5153Tv-SA"><i class="fa fa-twitter"></i></a>
+                                        <a target="_blank" href="https://www.facebook.com/comitedeluchabogota"><i class="fa fa-facebook"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -272,8 +272,7 @@
                                     </div>
                                     <h2 class="subtitle">Bucaramanga</h2>
                                     <div class="social-profiles">
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a target="_blank" href="https://twitter.com/comitesdelucha?t=HtzgtD1b5jCrp5153Tv-SA"><i class="fa fa-twitter"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -290,8 +289,7 @@
                                     </div>
                                     <h2 class="subtitle">Cali</h2>
                                     <div class="social-profiles">
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a target="_blank" href="https://twitter.com/comitesdelucha?t=HtzgtD1b5jCrp5153Tv-SA"><i class="fa fa-twitter"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -308,8 +306,7 @@
                                     </div>
                                     <h2 class="subtitle">Manizales</h2>
                                     <div class="social-profiles">
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a target="_blank" href="https://twitter.com/comitesdelucha?t=HtzgtD1b5jCrp5153Tv-SA"><i class="fa fa-twitter"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -326,8 +323,8 @@
                                     </div>
                                     <h2 class="subtitle">Medellín</h2>
                                     <div class="social-profiles">
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a target="_blank" href="https://twitter.com/comitesdelucha?t=HtzgtD1b5jCrp5153Tv-SA"><i class="fa fa-twitter"></i></a>
+                                        <a target="_blank" href="https://www.facebook.com/comitedelucha.medellin.3"><i class="fa fa-facebook"></i></a>
                                     </div>
                                 </div>
                             </div>
