--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -52,7 +52,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a  href="publicacions.html">publicacions</a></li>
+          <li><a  href="noticias.html">Noticias</a></li>
           <li><a href="luchadores.html">Coordinación de luchadores</a></li>
           <li><a href="actualidad.html">Situación Actual</a></li>
           <li><a id="enlace_redes"  href="redesociales.html">Redes sociales</a></li>
