--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -65,7 +65,7 @@
     <div class="row">
 
       <div class="col-md-12 col-sm-12 main">
-        <h1 class="page-header">Situación Actual</h1>
+        <h1 class="page-header">Redes Sociales</h1>
         <p>Las últimas 5 publicaciones de redes sociales, ordenadas por fecha, serán presentados en la página inicial</p>
         <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevapublicacion()">Agregar nueva publicación</button>
         <div class="table-responsive">
