--- a/info/que_sociedad_queremos.html
+++ b/info/que_sociedad_queremos.html
@@ -147,7 +147,7 @@
     </header>
 
 
-    <section class="page-title-section section-padding">
+    <section class="page-title-section section-padding banner-que-sociedad">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
