--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -146,7 +146,7 @@
     </header>
 
 
-    <section class="page-title-section section-padding">
+    <section class="page-title-section section-padding banner-quienes-somos">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
