Arrega problema de celular

--- a/admon/redesociales.html
+++ b/admon/redesociales.html
@@ -32,7 +32,11 @@
   <!-- Custom styles for this template -->
   <link href="/assets/css/admon.css" rel="stylesheet">
 
-
+  <style>
+    .navbar-nav{
+     display: block !important;
+    }
+</style>
 
 </head>
 
