--- a/admon/actualidad.html
+++ b/admon/actualidad.html
@@ -12,32 +12,36 @@
 
   <title>Administración de la página de los comités de lucha</title>
 
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/css/material.min.css">
-  <link rel="stylesheet" href="/assets/css/ripples.min.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="/assets/css/owl.carousel.css">
-  <link rel="stylesheet" href="/assets/css/settings.css">
-  <link rel="stylesheet" href="/assets/css/slicknav.css">
-  <link rel="stylesheet" href="/assets/css/animate.css">
-  
-  <link rel="stylesheet" href="/assets/css/colors/red.css">
-
-  <!-- include summernote css/js -->
-  <link href="/assets/summernote-0.8.18-dist/summernote-lite.min.css" rel="stylesheet">
-
-  <!-- include datepicker-->
-  <link rel="stylesheet" href="/assets/datepicker/jquery.datetimepicker.min.css">
-  <!-- Custom styles for this template -->
-  <link href="/assets/css/admon.css" rel="stylesheet">
-
-
-
-</head>
+   <!-- Bootstrap core CSS -->
+   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+   <link rel="stylesheet" href="/assets/css/style.css">
+   <link rel="stylesheet" href="/assets/css/material.min.css">
+   <link rel="stylesheet" href="/assets/css/ripples.min.css">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+ 
+   <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+   <link rel="stylesheet" href="/assets/css/settings.css">
+   <link rel="stylesheet" href="/assets/css/slicknav.css">
+   <link rel="stylesheet" href="/assets/css/animate.css">
+   
+   <link rel="stylesheet" href="/assets/css/colors/red.css">
+ 
+   <!-- include summernote css/js -->
+   <link href="/assets/summernote-0.8.18-dist/summernote-lite.min.css" rel="stylesheet">
+ 
+   <!-- include datepicker-->
+   <link rel="stylesheet" href="/assets/datepicker/jquery.datetimepicker.min.css">
+   <!-- Custom styles for this template -->
+   <link href="/assets/css/admon.css" rel="stylesheet">
+ 
+   <style>
+     .navbar-nav{
+      display: block !important;
+     }
+ </style>
+ 
+ </head>
 
 <body>
 
@@ -70,7 +74,7 @@
       <div class="col-md-12 col-sm-12 main">
         <h1 class="page-header">Situación Actual</h1>
         <p>Las últimas 3 noticias de situación actual nacional o internacional, ordenadas por fecha, serán presentados en la página inicial</p>
-        <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevaNoticia()">Agregar nueva información de situación actual</button>
+        <button type="button" class="btn btn-raised btn-primary" onclick="agregarNuevaNoticia()">Agregar nueva información</button>
         <div class="table-responsive">
           <table id="lista_examinar" class="table table-striped">
             <thead>
@@ -183,7 +187,7 @@
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript
+   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="/assets/js/jquery-min.js"></script>
