agregar texto qué sociedad queremos

--- a/info/que_sociedad_queremos.html
+++ b/info/que_sociedad_queremos.html
@@ -36,7 +36,8 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand site-logo vertical-align" href="/">
-                    <img class="img-responsive img-circle pull-left mt-20" src="/assets/images/icono.png" width="80px" />
+                    <img class="img-responsive img-circle pull-left mt-20" src="/assets/images/icono.png"
+                        width="80px" />
                     <h2 class="pull-left">Comités de Lucha</h2>
                 </a>
             </div>
@@ -54,13 +55,13 @@
                             <a class="sub-menu-item" href="/info/que_sociedad_queremos.html">¿Qué sociedad queremos?</a>
                         </div>
                     </li>
-                     <li>
+                    <li>
                         <a class="nav-link" href="#" type="button" aria-haspopup="true" aria-expanded="true">Próximos
                             Eventos</a>
                     </li>
                     <li class="dropdown sub-menu">
                         <a a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu2"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Actualidad</a>
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Actualidad</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu2">
                             <a class="sub-menu-item" href="#">Situación actual nacional</a>
                             <a class="sub-menu-item" href="#">Situación actual internacional</a>
@@ -74,9 +75,10 @@
                             <a class="sub-menu-item" href="#">Arte para el pueblo</a>
                             <a class="sub-menu-item" href="#">Asambleas Populares</a>
                             <a class="sub-menu-item" href="#">Coordinación por regiones</a>
-<a class="sub-menu-item" href="#">Primera Línea</a>
+                            <a class="sub-menu-item" href="#">Primera Línea</a>
                             <a class="sub-menu-item" href="#">Mujeres</a>
-                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>                        </div>
+                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>
+                        </div>
                     </li>
 
                 </ul>
@@ -99,7 +101,7 @@
                             </li>
                         </ul>
                     </li>
-                     <li>
+                    <li>
                         <a href="#">
                             Próximos Eventos
                         </a>
@@ -157,6 +159,95 @@
                             <h1 class="page-title">¿Qué sociedad queremos?</h1>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mea-blog-post-page section-padding">
+        <div class="container">
+            <div class="row">
+
+                <div class="single-blog-page col-md-12">
+                    <article class="single-post wow fadeInUp animated" data-wow-delay=".2s">
+                        <h2>PRONUNCIAMIENTO FRENTE A LAS DETENCIONES A LOS JOVENES DE PRIMERA LINEA</h2>
+                        <p>En Colombia en marzo del 2022, en la primera vuelta presidencial la participación de la
+                            población con capacidad de votar fue de un 55 %, lo cual es un pequeño cambio cuantitativo
+                            frente a una historia de abstención que ha sido mayoritaria en los últimos 20 años, lo cual
+                            muestra el mayor interés del proletariado en la política dentro del marco institucional
+                            burgués; es un pequeño cambio cuantitativo que es preparación para salto cualitativo, o de
+                            cantidad en calidad.</p>
+                        <p> Lo anterior es una manifestación de una de las leyes de la dialéctica, que es un método de
+                            pensamiento: “Es un desarrollo que al parecer repite etapas ya recorridas, pero de otro modo
+                            sobre una base más alta (“negación de la negación”), un desarrollo, por decirlo así, en
+                            espiral y no en línea recta; un desarrollo que se opera en forma de saltos, a través de
+                            cataclismos y revoluciones, que significan “interrupciones de la gradualidad”, <strong>un
+                                desarrollo que es transformación de la cantidad en calidad</strong>, impulsos internos
+                            de desarrollo originados por la contradicción, por el choque de las diversas fuerzas y
+                            tendencias que actúan sobre determinado cuerpo, o dentro de los límites de un fenómeno dado
+                            o en el seno de una sociedad dada; interdependencia intima e indisoluble concatenación de
+                            todos los aspectos de cada fenómeno (con la particularidad de que la historia pone
+                            constantemente al descubierto nuevos aspectos), concatenación que ofrece un proceso de
+                            movimiento único, universal y sujeto a leyes, tales son algunos de los rasgos de la
+                            dialéctica, teoría mucho más dotada de contenido (que la habitual ) doctrina de la
+                            evolución.” Tomado de la Biografía de Carlos Marx de V.i Lenin </p>
+                        <p> En Colombia a que los hechos de los últimos años han puesto en evidencia que las condiciones
+                            sociales han empeorado y que las decisiones políticas tomadas por el Estado burgués han
+                            afectado a la población al llevarla a un estado de Crisis humanitaria; ante lo cual las
+                            masas se ven obligadas a participar en la farsa electoral en busca de un cambio anhelado;
+                            sin embargo todavía hace falta que las masas descubran por cuenta propia que el proletariado
+                            no puede tomar las instituciones de la burguesía para sus fines revolucionarios sino
+                            destruir la maquina estatal de los capitalistas y sobre sus ruinas construir un estado de
+                            nuevo tipo dirigido por los Obreros y campesinos.</p>
+                        <p> Cuando las masas laboriosas se den cuenta que no es mediante reformas graduales o pacificas
+                            al orden burgués como conseguirá los cambios que añora y que no basta con tumbar a régimen
+                            mafioso sino al orden o sistema capitalista en su conjunto, pues así la mafia no este
+                            directamente en la casa de Nariño continuara dirigiendo los destinos de la sociedad mediante
+                            el poder del sistema financiero, los monopolios, las instituciones burguesas e incluso
+                            comprando o corrompiendo a dirigentes honestos.</p>
+                        <p>El régimen mafioso como parte de su persecución hacia el movimiento popular desde el 14 de
+                            junio ordeno “adelantar capturas contra los integrantes de las Primeras Líneas a nivel
+                            nacional y brindar resultados a como dé lugar, por una supuesta alerta frente a hechos de
+                            violencia que desconocerán los resultados de las elecciones en la segunda vuelta
+                            presidencial”. La persecución hacia los jóvenes de la primera línea tiene su base en el
+                            temor del régimen mafioso, de que en caso que gane las elecciones Rodolfo Hernández se
+                            presente un nuevo levantamiento popular, </p>
+                        <p>Los comités de lucha rechazan las detenciones contra los jóvenes de la 1L, pues hace parte de
+                            la persecución hacia el movimiento popular de Duque y en ausencia de pruebas tratar de
+                            apagar la indignación que recorre a todo el país y que en cualquier momento puede volver a
+                            encenderse.</p>
+                        <p>Hacemos un llamado a las masas a preparar a conciencia un nuevo levantamiento popular para
+                            buscar un cambio real teniendo en cuenta que según la dialéctica las transformaciones en la
+                            sociedad se dan en la forma de saltos, a través de cataclismos y revoluciones y por eso no
+                            hay que perder de vista las aspiraciones futuras de la clase obrera, que se resumen en: </p>
+                        <h3>¿QUÉ TIPO DE SOCIEDAD QUEREMOS?</h3>
+                        <ol>
+                            <li>Edificar la democracia directa y comprometida desde el proletariado, con la iniciativa
+                                directa de las masas en la administración eficaz del Estado, que tengan derecho a
+                                dirigir con sus propias organizaciones por sectores productivos, comunidades o de
+                                ubicación geográfica bajo una nueva forma de gobierno y administración del Estado
+                                socialista.</li>
+                            <li>Abolición de las fuerzas militares, la policía, los funcionarios y el ejército
+                                permanente para ser sustituido por el armamento general de todo el pueblo, siendo
+                                garantes que participen sin falta las mujeres, como embriones de un servicio social de
+                                una futura milicia integrada por todo el pueblo y nacida del armamento general como
+                                forma de defensa contra la restauración capitalista.</li>
+                            <li>Que el pueblo aprenda a dirigir, adquiera una cultura de cooperación o apoyo mutuo,
+                                comparta el conocimiento y resuelva las necesidades de los trabajadores por cuenta
+                                propia.</li>
+                            <li>Educar con el ejemplo o arrancar desde nosotros mismos formando nuevas organizaciones de
+                                masas, de jóvenes obreros, comités y grupos de fábricas, grupos estudiantiles y mantener
+                                relaciones con sindicatos populares como correas de transmisión hacia una economía
+                                socialista. </li>
+                            <li>Propiedad colectiva de los medios de producción y unión de las masas para trabajar en
+                                comunidad teniendo en cuenta que la pequeña producción en la ciudad o en campo no está
+                                en condiciones de librar a la humanidad de la miseria de las masas </li>
+                            <li>Es necesario que las mujeres, las comunidades indígenas o negras, LGTBIQ, jóvenes,
+                                ancianos tengan acceso a sus derechos sin tanto trámite como ocurre en el capitalismo y
+                                que los trabajadores puedan adquirir más beneficios que el mínimo vital.</li>
+                        </ol>
+                        <p>Coordinador de Comités de lucha, 16 de junio del 2022</p>
+                    </article>
                 </div>
             </div>
         </div>
