pagina interna de proximos eventos

--- a/info/quienes_somos.html
+++ b/info/quienes_somos.html
@@ -55,7 +55,7 @@
                         </div>
                     </li>
                      <li>
-                        <a class="nav-link" href="#" type="button" aria-haspopup="true" aria-expanded="true">Próximos
+                        <a class="nav-link" href="/noticias/index.php" type="button" aria-haspopup="true" aria-expanded="true">Próximos
                             Eventos</a>
                     </li>
                     <li class="dropdown sub-menu">
@@ -99,7 +99,7 @@
                         </ul>
                     </li>
                      <li>
-                        <a href="#">
+                        <a href="/noticias/index.php">
                             Próximos Eventos
                         </a>
                     </li>
