--- a/info/que_sociedad_queremos.html
+++ b/info/que_sociedad_queremos.html
@@ -56,7 +56,7 @@
                         </div>
                     </li>
                     <li>
-                        <a class="nav-link" href="#" type="button" aria-haspopup="true" aria-expanded="true">Próximos
+                        <a class="nav-link" href="/noticias/index.php" type="button" aria-haspopup="true" aria-expanded="true">Próximos
                             Eventos</a>
                     </li>
                     <li class="dropdown sub-menu">
@@ -102,7 +102,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/noticias/index.php">
                             Próximos Eventos
                         </a>
                     </li>
