pagina internaa de coordinación de luchadores

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Coordinación de
                             Luchadores</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item" href="#">Arte para el pueblo</a>
-                            <a class="sub-menu-item" href="#">Asambleas Populares</a>
-                            <a class="sub-menu-item" href="#">Coordinación por regiones</a>
-                            <a class="sub-menu-item" href="#">Primera Línea</a>
-                            <a class="sub-menu-item" href="#">Mujeres</a>
-                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>                        
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=arte">Arte para el pueblo</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=asambleas">Asambleas Populares</a>
+                             <a class="sub-menu-item" href="/luchadores/index.php?categoria=regiones">Coordinación por regiones</a>
+                           <a class="sub-menu-item" href="/luchadores/index.php?categoria=primera_linea">Primera Línea</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=mujeres">Mujeres</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=etnias">Campesinos, Indígenas y etnias</a>                        
                         </div>
                     </li>
 
@@ -127,19 +127,22 @@
                         </a>
                         <ul class="dropdown">
                             <li>
-                                <a href="#">Arte para el pueblo</a>
+                                <a href="/luchadores/index.php?categoria=arte">Arte para el pueblo</a>
                             </li>
                             <li>
-                                <a href="#">Asambleas Populares</a>
+                                <a href="/luchadores/index.php?categoria=asambleas">Asambleas Populares</a>
                             </li>
                             <li>
-                                <a href="#">Coordinación por regiones</a>
+                                <a href="/luchadores/index.php?categoria=regiones">Coordinación por regiones</a>
                             </li>
                             <li>
-                                <a href="#">Mujeres</a>
+                                <a href="/luchadores/index.php?categoria=primera_linea">Primera Línea</a>
                             </li>
                             <li>
-                                <a href="#">Campesinos, Indígenas y etnias</a>
+                                <a href="/luchadores/index.php?categoria=mujeres">Mujeres</a>
+                            </li>
+                            <li>
+                                <a href="/luchadores/index.php?categoria=etnias">Campesinos, Indígenas y etnias</a>
                             </li>
                         </ul>
                     </li>
@@ -308,7 +311,7 @@
             </div>
             <div class="row mt-30 wow animated fadeInUp" data-wow-delay=".3s">
                 <div class="col-md-12 text-center">
-                    <a href="javascript:void(0)" class="animated4 btn btn-common" data-ripple-color="#000"><i
+                    <a href="/luchadores/index.php" class="animated4 btn btn-common" data-ripple-color="#000"><i
                             class="material-icons">&#xE90F;</i> Explorar más<div class="ripple-container"></div>
                     </a>
                 </div>
