--- a/info/plataforma_lucha.html
+++ b/info/plataforma_lucha.html
@@ -71,12 +71,12 @@
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Coordinación de
                             Luchadores</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item" href="#">Arte para el pueblo</a>
-                            <a class="sub-menu-item" href="#">Asambleas Populares</a>
-                            <a class="sub-menu-item" href="#">Coordinación por regiones</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=arte">Arte para el pueblo</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=asambleas">Asambleas Populares</a>
+                             <a class="sub-menu-item" href="/luchadores/index.php?categoria=regiones">Coordinación por regiones</a>
 <a class="sub-menu-item" href="#">Primera Línea</a>
-                            <a class="sub-menu-item" href="#">Mujeres</a>
-                            <a class="sub-menu-item" href="#">Campesinos, Indígenas y etnias</a>                        </div>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=mujeres">Mujeres</a>
+                            <a class="sub-menu-item" href="/luchadores/index.php?categoria=etnias">Campesinos, Indígenas y etnias</a>                        </div>
                     </li>
 
                 </ul>
@@ -124,19 +124,22 @@
                         </a>
                         <ul class="dropdown">
                             <li>
-                                <a href="#">Arte para el pueblo</a>
+                                <a href="/luchadores/index.php?categoria=arte">Arte para el pueblo</a>
                             </li>
                             <li>
-                                <a href="#">Asambleas Populares</a>
+                                <a href="/luchadores/index.php?categoria=asambleas">Asambleas Populares</a>
                             </li>
                             <li>
-                                <a href="#">Coordinación por regiones</a>
+                                <a href="/luchadores/index.php?categoria=regiones">Coordinación por regiones</a>
                             </li>
                             <li>
-                                <a href="#">Mujeres</a>
+                                <a href="/luchadores/index.php?categoria=primera_linea">Primera Línea</a>
                             </li>
                             <li>
-                                <a href="#">Campesinos, Indígenas y etnias</a>
+                                <a href="/luchadores/index.php?categoria=mujeres">Mujeres</a>
+                            </li>
+                            <li>
+                                <a href="/luchadores/index.php?categoria=etnias">Campesinos, Indígenas y etnias</a>
                             </li>
                         </ul>
                     </li>
