página interna de situación actual

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <a a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu2"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Actualidad</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu2">
-                            <a class="sub-menu-item" href="#">Situación actual nacional</a>
-                            <a class="sub-menu-item" href="#">Situación actual internacional</a>
+                            <a class="sub-menu-item" href="/actualidad/index.php?categoria=nacional">Situación actual nacional</a>
+                            <a class="sub-menu-item" href="/actualidad/index.php?categoria=internacional">Situación actual internacional</a>
                         </div>
                     </li>
                     <li class="dropdown sub-menu">
@@ -113,10 +113,10 @@
                         </a>
                         <ul class="dropdown">
                             <li>
-                                <a href="#">Situación actual nacional</a>
+                                <a href="/actualidad/index.php?categoria=nacional">Situación actual nacional</a>
                             </li>
                             <li>
-                                <a href="#">Situación actual internacional</a>
+                                <a href="/actualidad/index.php?categoria=internacional">Situación actual internacional</a>
                             </li>
                         </ul>
                     </li>
@@ -410,7 +410,7 @@
             <div class="row mt-30 wow animated fadeInUp" data-wow-delay=".6s">
 
                 <div class="col-md-12 text-center">
-                    <a href="blog.html" class="animated4 btn btn-common" data-ripple-color="#000"><i class="material-icons">&#xE90F;</i> Encontrar más noticias nacionales e internacionales<div class="ripple-container"></div></a>
+                    <a href="/actualidad/index.php" class="animated4 btn btn-common" data-ripple-color="#000"><i class="material-icons">&#xE90F;</i> Encontrar más noticias nacionales e internacionales<div class="ripple-container"></div></a>
                 </div>
             </div>
         </div>
