--- a/info/plataforma_lucha.html
+++ b/info/plataforma_lucha.html
@@ -42,10 +42,10 @@
             </div>
             <nav role="navigation" id="nav-main" class="okayNav">
                 <ul class="nav navbar-nav">
-                    <li class="active">
+                    <li >
                         <a class="nav-link" href="/" type="button" aria-haspopup="true" aria-expanded="true">Inicio</a>
                     </li>
-                    <li class="dropdown sub-menu">
+                    <li class=" active dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Acerca de nosotros</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
@@ -82,12 +82,12 @@
                 </ul>
                 <ul class="wpb-mobile-menu">
                     <li>
-                        <a class="active" href="/">
+                        <a  href="/">
                             Inicio
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a class="active" href="#">
                             Acerca de nosotros
                         </a>
                         <ul class="dropdown">
@@ -96,6 +96,9 @@
                             </li>
                             <li>
                                 <a href="/info/plataforma_lucha.html">Plataforma de Lucha</a>
+                            </li>
+                            <li>
+                                <a href="/info/que_sociedad_queremos.html">¿Qué sociedad queremos?</a>
                             </li>
                         </ul>
                     </li>
